--- a/app/@modal/(.)notes/[id]/NotePreview.client.module.css
+++ b/app/@modal/(.)notes/[id]/NotePreview.client.module.css
@@ -1,4 +1,4 @@
-.container {
+/* .container {
   max-width: 800px;
   margin: 32px auto;
   padding: 24px;
@@ -65,4 +65,4 @@
   text-decoration: underline;
   display: inline-block;
   background-color: transparent;
-}
+} */
